add scope to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -54,6 +54,7 @@
     }
   ],
   "start_url": "/pengeluaran-pwa/",
+  "scope": "/pengeluaran-pwa/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000"
